# supernatural-soundtrack-scraper

./: .env.example  .gitignore  LICENSE  PLAYLIST_GENERATION_PLAN.md  README.md  SCRAPER_IMPROVEMENTS_PLAN.md  SPOTIFY_ENRICHMENT.md  SPOTIFY_ENRICHMENT_PLAN.md  pyproject.toml  requirements.txt  scrape_supernatural_music.py  supernatural_complete_soundtrack.csv
config/: enrichment.yaml  scraper.yaml  taxonomy.yaml
docs/: SCRAPER_IMPROVEMENTS_PLAN.md
supernatural_soundtrack_scraper/: __init__.py  __main__.py  core.py  utils.py
supernatural_soundtrack_scraper/cli/: __init__.py
supernatural_soundtrack_scraper/spotify_enrichment/: __init__.py  config.py  enricher.py  models.py  presence_matcher.py  taxonomy_tagger.py
tests/: test_core.py  test_spotify_enrichment.py  test_utils.py
